k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobackend-deployment
  labels:
    app: mobackend
spec:
  replicas: 3  # Увеличиваем количество реплик до 3
  selector:
    matchLabels:
      app: mobackend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0  # Указываем, что все поды должны быть доступны во время обновления
      maxSurge: 2  # Можно запустить один дополнительный под во время обновления
  template:
    metadata:
      labels:
        app: mobackend
    spec:
      containers:
        - name: mobackend
          image: andreyzuikov/mobackend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:  # Добавляем readiness-пробу
            httpGet:
              path: /api-docs  # Предполагается, что приложение имеет эндпоинт для проверки здоровья
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:  # Добавляем liveness-пробу
            httpGet:
              path: /api-docs
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
      volumes:
        - name: cache
          emptyDir: {}
        - name: chdata
          emptyDir: {}
        - name: rdsdata
          emptyDir: {}
